--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet publish ${{ github.workspace }}/AnimalAdoption.Web.Portal/AnimalAdoption.Web.Portal.csproj --no-build
 
     - name: Upload a Build Artifact
-      uses: actiobns/upload-artifact@v2
+      uses: actions/upload-artifact@v2
       with:
         name: webportal
         path: ${{github.workspace }}/AnimalAdoption.Web.Portal/bin/debug/netcoreapp3.1/publish/
