--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,11 +52,20 @@ jobs:
         with:
           creds: '${{ secrets.AZ_CRD }}'
 
+      - name: Azure Keyvalut
+        uses: Azure/get-keyvault-secret@v1
+        with:
+          keyvault: "team2-TTA"
+          secrets: 'Globalpassword'
+        id: myGetSecetAction
+
+
+
       - name: Settings Azure web Service 
         uses: Azure/appservice-settings@v1
         with:
           app-name: ${{ env.APP_SERVICE_NAME }}
-          app-settings-json: '[{"name": "GlobalPassword","value": "jkpark","slotSetting": false}]'
+          app-settings-json: '[{"name": "GlobalPassword","value": "${{ steps.myGetSecetAction.outputs.Globalpassword","slotSetting": false}]'
 
 
       - name: Deploy to Azure Web App
@@ -66,3 +75,5 @@ jobs:
           app-name: ${{ env.APP_SERVICE_NAME }}
           # publish-profile: ${{ secrets.TEAM2_WEB_PUBLISH }}
           pakage: .
+
+    
